part1/logger/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logger-ingress
spec:
  rules:
    - http:
        paths:
          - path: /logger
            pathType: Prefix
            backend:
              service:
                name: logger-svc
                port:
                  number: 2345
